<resources>
    <string name="app_name">Pertemuan 5</string>
    <string name="Lbl1">Pertemuan 5 - Menambah Button</string>
    <string name="Lbn1">OK</string>
    <string name="Lbn2">OKH</string>
    <string name="menu1">menu1</string>
    <string name="menu3">menu3</string>
    <string name="menu2">menu2</string>
    <string name="Textp">Puzzle Angka</string>
    <string name="Button1">1</string>
    <string name="Button2">2</string>
    <string name="Button3">3</string>
    <string name="Button4">4</string>
    <string name="Button5">5</string>
    <string name="Button6">6</string>
</resources>
